# Error-Report-Library

./: .gitignore  CMakeLists.txt  README.md  classerr_1_1errorReport.html  classes.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  errorReport_8hpp_source.html  examples.html  functions_func.html  index.html  namespaceerr.html
errorReportLib/: CMakeLists.txt  Doxyfile  errorReport.cpp  errorReport.hpp  examples.dox  mainpage.dox
example/: testErrorFile.txt  testMain.cpp
html/: annotated.html  classerr_1_1errorReport-members.html  examples_8dox.html  files.html  functions.html  graph_legend.html  namespaces.html  pages.html
html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  files_0.js  functions_1.js  functions_2.js  functions_4.js  namespaces_0.js  pages_0.js
search/: all_2.js  all_4.js  all_5.js  functions_0.js  functions_3.js  searchdata.js
